--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- герой -->
         <section class="hero">
             <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
-            <button class="button primary">Заказать услугу</button>
+            <button type="button" class="button primary">Заказать услугу</button>
         </section>
     
     
