--- a/portfolio.html
+++ b/portfolio.html
@@ -34,72 +34,73 @@
     </header>
 
     <main>
-        <h1>Портфолио</h1>
+         <!-- портфолио -->
+        <h1 class="visually-hidden">Портфолио</h1>
 
         <section>
             <ul>
             <li>
-            <button type="button">Все</button>
+                <button class="button-section" type="button">Все</button>
             </li>
             <li>
-                <button type="button">Веб-сайты</button>
+                <button class="button-section" type="button">Веб-сайты</button>
             </li>
             <li>
-                <button type="button">Приложения</button>
+                <button class="button-section" type="button">Приложения</button>
             </li>
             <li>
-                <button type="button">Дизайн</button>
+                <button class="button-section" type="button">Дизайн</button>
             </li>
             <li>
-                <button type="button">Маркетинг</button>
+                <button class="button-section" type="button">Маркетинг</button>
             </li>
             </ul>
 
             <ul>
                 <li>
-                   <img src="./images/галерея/img-1.jpg" alt="">
-                   <h2>Технокряк</h2>
-                   <p>Веб-сайт</p> 
+                   <img src="./images/галерея/img-1.jpg" alt="ноутбук" width="370"/>
+                   <h2 class="section-title">Технокряк</h2>
+                   <p class="section-text">Веб-сайт</p> 
                 </li>
                 <li>
-                    <img src="./images/галерея/img-2.jpg" alt="">
-                    <h2>Постер New Orlean vs Golden Star</h2>
-                    <p>Дизайн</p>
+                    <img src="./images/галерея/img-2.jpg" alt="баскетболисты" width="370"/>
+                    <h2 class="section-title">Постер New Orlean vs Golden Star</h2>
+                    <p class="section-text">Дизайн</p>
                 </li>
                 <li>
-                    <img src="./images/галерея/img-3.jpg" alt="">
-                    <h2>Ресторан Seafood</h2>
-                    <p>Приложение</p>
+                    <img src="./images/галерея/img-3.jpg" alt="логотип на фоне рыбы" width="370"/>
+                    <h2 class="section-title">Ресторан Seafood</h2>
+                    <p class="section-text">Приложение</p>
                 </li>
                 <li>
-                    <img src="./images/галерея/img-4.jpg" alt="">
-                    <h2>Проект Prime</h2>
-                    <p>Маркетинг</p>
+                    <img src="./images/галерея/img-4.jpg" alt="наушники" width="370"/>
+                    <h2 class="section-title">Проект Prime</h2>
+                    <p class="section-text">Маркетинг</p>
                 </li>
                 <li>
-                    <img src="./images/галерея/img-5.jpg" alt="">
-                    <h2>Проект Boxes</h2>
-                    <p>Приложение</p>
+                    <img src="./images/галерея/img-5.jpg" alt="коробки" width="370"/>
+                    <h2 class="section-title">Проект Boxes</h2>
+                    <p class="section-text">Приложение</p>
                 </li>
                 <li>
-                    <img src="./images/галерея/img-6.jpg" alt="">
-                    <h2>Inspiration has no Borders</h2>
-                    <p>Веб-сайт</p>
+                    <img src="./images/галерея/img-6.jpg" alt="монитор" width="370"/>
+                    <h2 class="section-title">Inspiration has no Borders</h2>
+                    <p class="section-text">Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="./images/галерея/img-7.jpg" alt="">
-                    <h2>Издание Limited Edition</h2>
-                    <p>Дизайн</p>
+                    <img src="./images/галерея/img-7.jpg" alt="книга" width="370"/>
+                    <h2 class="section-title">Издание Limited Edition</h2>
+                    <p class="section-text">Дизайн</p>
                 </li>
                 <li>
-                    <img src="./images/галерея/img-8.jpg" alt="">
-                    <h2>Проект LAB</h2>
-                    <p>Маркетинг</p>
+                    <img src="./images/галерея/img-8.jpg" alt="бирка" width="370"/>
+                    <h2 class="section-title">Проект LAB</h2>
+                    <p class="section-text">Маркетинг</p>
                 </li>
                 <li>
-                    <img src="./images/галерея/img-9.jpg" alt="">
-                    <h2>Growing Business</h2>
-                    <p>Приложение</p>
+                    <img src="./images/галерея/img-9.jpg" alt="работа за ноутом" width="370"/>
+                    <h2 class="section-title">Growing Business</h2>
+                    <p class="section-text">Приложение</p>
                 </li>
             </ul>
         
