--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.2.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
@@ -119,10 +120,10 @@
                         class="button address">г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
                 <li>
-                    <a href="mailto:info@example.com" class="button secondary">info@example.com</a>
+                    <a href="mailto:info@example.com" class="button-nav">info@example.com</a>
                 </li>
                 <li>
-                    <a href="tel:+380991111111" class="button secondary">tel:+38 099 111 11 11</a>
+                    <a href="tel:+380991111111" class="button-nav">tel:+38 099 111 11 11</a>
                 </li>
             </ul>
         </address>
